@@ -1,5 +1,10 @@
 $Id$
 
+2016-04-15  Christian Franke  <franke@computer.org>
+
+	os_linux.cpp: Fix harmless bug in errno check of HPTIO_CTL ioctl()
+	calls.  Bug was introduced 10 years ago in r2237.
+
 2016-04-15  Yuriy M. Kaminskiy  <yumkam@gmail.com>
 
 	os_linux.cpp: Fix harmless bug in errno check of HDIO_DRIVE_TASK*
